tests/accept/compile/ttypeconverter1.nim

converter p(i: int): bool = return i != 0

if 0:
  echo "foo"

