tests/reject/tmethod.nim

method m(i: int): int =
  return 5

